--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"@babel/core": "^7.23.7",
 		"@babel/preset-env": "^7.23.8",
 		"@babel/preset-react": "^7.23.3",
-		"@formio/js": "^5.0.0-rc.33",
+		"@formio/js": "https://github.com/ManikantaReddy045/formio.js.git#v5.0.0-rc.33",
 		"babel-loader": "^9.1.3",
 		"chai": "^4.3.6",
 		"enzyme": "^3.11.0",
@@ -71,7 +71,7 @@
 		"lib"
 	],
 	"peerDependencies": {
-		"@formio/js": "^5.0.0-rc.33",
+		"@formio/js": "https://github.com/ManikantaReddy045/formio.js.git#v5.0.0-rc.33",
 		"react": "^15.3.0 || ^16.0.0 || ^17.0.0 || ^18.1.0",
 		"react-dom": "^15.3.0 || ^16.0.0 || ^17.0.0 || ^18.1.0"
 	}
