--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-react": "^7.21.5",
-    "formiojs": "^4.12.4-rc.2",
+    "formiojs": "https://github.com/ManikantaReddy045/formio.js.git#v4.12.4-rc.2",
     "jsdom": "^16.4.0",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
@@ -75,7 +75,7 @@
     "lib"
   ],
   "peerDependencies": {
-    "formiojs": "^4.12.4-rc.2",
+    "formiojs": "https://github.com/ManikantaReddy045/formio.js.git#v4.12.4-rc.2",
     "react": "^15.3.0 || ^16.0.0 || ^17.0.0",
     "react-dom": "^15.3.0 || ^16.0.0 || ^17.0.0"
   }
